--- a/quote/templates/quote/quote.html
+++ b/quote/templates/quote/quote.html
@@ -51,15 +51,15 @@
             </div>
 
           </div>
-          <div class="row">
+          <div class="row" id="services">
             <h4 class="w-100 px-3">Service</h4>
-            <div class="col-md-6 col-12 p-3">
+            <div class="col-md-6 col-12 p-3 small">
               <fieldset>
                 <legend class="lead">Time</legend>
                 {{ quote_form.service | as_crispy_field }}
               </fieldset>
             </div>
-            <div class="col-md-6 col-12 p-3">
+            <div class="col-md-6 col-12 p-3 small">
               <fieldset>
                 <legend class="lead">Speciality</legend>
                 {{ quote_form.spec_service | as_crispy_field }}
@@ -110,7 +110,7 @@
 {% endblock %}
 
 {% block postloadjs %}
-
+{{ block.super }}
 <script>
   $("#contact-form").submit(function (e) {
     $('#loading-overlay').fadeToggle(100);
@@ -143,22 +143,5 @@
     }
   }); 
 </script>
-
-<script>
-  $(document).ready(function () {
-    $("#div_id_service").children('div').addClass("d-flex flex-row service");
-    $(".d-flex.flex-row.service").children().children('input').addClass("time m-3");
-    $(".d-flex.flex-row.service").children('div').addClass("m-3");
-    $('input.time').on('change', function () {
-      $('input.time').not(this).prop('checked', false);
-    });
-    $("#div_id_spec_service").children('div').addClass("d-flex flex-row special");
-    $(".d-flex.flex-row.special").children().children('input').addClass("special m-3");
-    $(".d-flex.flex-row.special").children('div').addClass("m-3");
-    $('input.special').on('change', function () {
-      $('input.special').not(this).prop('checked', false);
-    });
-  });
-</script>
-
+<script src="{% static 'quote/js/quote.js' %}"></script>
 {% endblock %}
