--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -19,6 +19,8 @@
       <hr>
       <h2 class="logo-font mb-4">Checkout</h2>
       {{bag_items}}
+
+      {{item_data}}
       <hr>
     </div>
   </div>
@@ -34,7 +36,7 @@
           <p class="mb-1 mt-0 small text-muted">Subtotal</p>
         </div>
       </div>
-
+        
       {% for item in bag_items %}
       <div class="row">
         <div class="col-2 mb-1">
