--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -72,26 +72,37 @@
 
             </div>
             <div class="row">
+            <div id="items" class="col-12">
               <fieldset>
+                <legend class="w-100">Dimensions & Weight</legend>
+                <div class="w-100 d-flex justify-content-around">
+                  <div class="mx-3 ">
+                    {% crispy_addon quote_form.weight append='kg' %}
 
-                <div class="col-12">
-                  <div class="row">
-                    <div class="col-3">
-                      {{ quote_form.weight | as_crispy_field }}
-                    </div>
-                    <div class="col-3">
-                      {{ quote_form.height | as_crispy_field }}
-                    </div>
-                    <div class="col-3">
-                      {{ quote_form.length | as_crispy_field }}
-                    </div>
-                    <div class="col-3">
-                      {{ quote_form.width | as_crispy_field }}
-                    </div>
+                  </div>
+                  <div class="mx-3">
+                    {% crispy_addon quote_form.height append='cm' %}
+                  </div>
+                  <div class="mx-3">
+                    {% crispy_addon quote_form.length append='cm' %}
+                  </div>
+                  <div class="mx-3">
+                    {% crispy_addon quote_form.width append='cm' %}
+                  </div>
+                  <div class="ml-3 d-flex justify-content-end">
+                    <button type="button" class="btn pl-3" id="less_items">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn pl-3" id="more_items">
+                      <i class="fas fa-plus"></i>
+                    </button>
                   </div>
                 </div>
+     
+              
               </fieldset>
             </div>
+          </div>
           </div>
           <div class="text-right">
             <button class="btn-dark btn btn-md rounded-0" type="submit">Get Quote!</button>
