--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,7 +33,7 @@
     <div class="row">
       <div class="col-12">
 
-        <form action="{% url 'quote' %}" method="POST" class="form mb-2 p-3 bg-white" enctype="multipart/form-data">
+        <form method="POST" class="form mb-2 p-3 bg-white" enctype="multipart/form-data">
           {% csrf_token %}
           <h2 class="p-3">Request a Quote</h2>
           <div class="container">
