--- a/contact_form/templates/contact_form/contact_form.html
+++ b/contact_form/templates/contact_form/contact_form.html
@@ -44,7 +44,9 @@
       <!-- Google Map and contact info -->
       <div class="col-lg-6">
         <div class="map-container mt-5 mb-3">
-          <div id="map"></div>
+          <div id="map"><noscript><p>If you have been redirected here and you are trying to obtain a quote or send a parcel that means Javascript is disabled.
+            Either enable Javascipt or send us a message and see if we can help.</p>
+          </noscript></div>
         </div>
         <h2 class="">Contact Information</h2>
         <p class="mb-0">Unit 1 Spectrum Business Estate, Bircholt Road</p>
