--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -72,24 +72,122 @@
 
             </div>
             <div class="row">
-            <div id="items" class="col-12">
-              <fieldset>
-                <legend class="w-100">Dimensions & Weight</legend>
-                <div class="w-100 d-flex justify-content-around">
-                  <div class="mx-3 ">
-                    {% crispy_addon quote_form.weight append='kg' %}
+              <div id="items" class="col-12">
+                <fieldset>
+                  <legend class="">Dimensions & Weight</legend>
+                  <div id="item_1" class="d-flex justify-content-around row">
+                    <div class="col-12">
+                      <fieldset>
+                        <legend class="small">Item 1</legend>
+                        <div class="row">
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.weight append='kg' %}
+
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.height append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.length append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.width append='cm' %}
+                          </div>
+                        </div>
+                      </fieldset>
+                    </div>
 
                   </div>
-                  <div class="mx-3">
-                    {% crispy_addon quote_form.height append='cm' %}
+                  <div id="item_2" class="d-none justify-content-around row">
+                    <div class="col-12">
+                      <fieldset>
+                        <legend class="small">Item 2</legend>
+                        <div class="row">
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.weight append='kg' %}
+
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.height append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.length append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.width append='cm' %}
+                          </div>
+                        </div>
+                      </fieldset>
+                    </div>
                   </div>
-                  <div class="mx-3">
-                    {% crispy_addon quote_form.length append='cm' %}
+                  <div id="item_3" class="d-none justify-content-around row">
+                    <div class="col-12">
+                      <fieldset>
+                        <legend class="small">Item 3</legend>
+                        <div class="row">
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.weight append='kg' %}
+
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.height append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.length append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.width append='cm' %}
+                          </div>
+                        </div>
+                      </fieldset>
+                    </div>
+
                   </div>
-                  <div class="mx-3">
-                    {% crispy_addon quote_form.width append='cm' %}
+                  <div id="item_4" class="d-none justify-content-around row">
+                    <div class="col-12">
+                      <fieldset>
+                        <legend class="small">Item 4</legend>
+                        <div class="row">
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.weight append='kg' %}
+
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.height append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.length append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.width append='cm' %}
+                          </div>
+                        </div>
+                      </fieldset>
+                    </div>
                   </div>
-                  <div class="ml-3 d-flex justify-content-end">
+                  <div id="item_5" class="d-none justify-content-around row">
+                    <div class="col-12">
+                      <fieldset>
+                        <legend class="small">Item 5</legend>
+                        <div class="row">
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.weight append='kg' %}
+
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.height append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.length append='cm' %}
+                          </div>
+                          <div class="col-sm-3">
+                            {% crispy_addon quote_form.width append='cm' %}
+                          </div>
+                        </div>
+                      </fieldset>
+                    </div>
+                  </div>
+                  <div class="mb-3 d-flex justify-content-end">
                     <button type="button" class="btn pl-3" id="less_items">
                       <i class="fas fa-minus"></i>
                     </button>
@@ -97,38 +195,16 @@
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
-                </div>
-     
-              
-              </fieldset>
+
+
+                </fieldset>
+              </div>
             </div>
-          </div>
           </div>
           <div class="text-right">
             <button class="btn-dark btn btn-md rounded-0" type="submit">Get Quote!</button>
           </div>
         </form>
-      </div>
-      <div class="col-12 col-lg-8">
-        <div class="">
-          <h3 class="text-white">Need to send a parcel? Open a credit account? We can help!</h3>
-          <h4>
-            <a href="#" class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Send a
-              Parcel</a>
-            <a href="{% url 'create_account' %}"
-              class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Open a
-              Credit Account</a>
-          </h4>
-        </div>
-        <div class="my-5">
-          <h3 class="text-white">Try our new store for all your packaging needs</h3>
-          <h4>
-            <a href="{% url 'store_home' %}"
-              class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Store</a>
-          </h4>
-
-
-        </div>
       </div>
     </div>
   </div>
