--- a/quote/templates/quote/quote.html
+++ b/quote/templates/quote/quote.html
@@ -83,29 +83,126 @@
           <div class="row">
             <div id="items" class="col-12">
               <fieldset>
-                <legend class="w-100">Dimensions & Weight</legend>
-                <div class="w-100 d-flex justify-content-around">
-                  <div class="mx-3 ">
-                    {% crispy_addon quote_form.weight append='kg' %}
+                <legend class="">Dimensions & Weight</legend>
+                <div id="item_1" class="d-flex justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 1</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.weight append='kg' %}
 
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.height append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.length append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.width append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
                   </div>
-                  <div class="mx-3">
-                    {% crispy_addon quote_form.height append='cm' %}
+
+                </div>
+                <div id="item_2" class="d-none justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 2</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.weight append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.height append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.length append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.width append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
                   </div>
-                  <div class="mx-3">
-                    {% crispy_addon quote_form.length append='cm' %}
+                </div>
+                <div id="item_3" class="d-none justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 3</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.weight append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.height append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.length append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.width append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
                   </div>
-                  <div class="mx-3">
-                    {% crispy_addon quote_form.width append='cm' %}
+
+                </div>
+                <div id="item_4" class="d-none justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 4</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.weight append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.height append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.length append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.width append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
                   </div>
-                  <div class="ml-3 d-flex justify-content-end">
-                    <button type="button" class="btn pl-3" id="less_items">
-                      <i class="fas fa-minus"></i>
-                    </button>
-                    <button type="button" class="btn pl-3" id="more_items">
-                      <i class="fas fa-plus"></i>
-                    </button>
+                </div>
+                <div id="item_5" class="d-none justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 5</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.weight append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.height append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.length append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon quote_form.width append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
                   </div>
+                </div>
+                <div class="ml-3 d-flex justify-content-end">
+                  <button type="button" class="btn pl-3" id="less_items">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                  <button type="button" class="btn pl-3" id="more_items">
+                    <i class="fas fa-plus"></i>
+                  </button>
                 </div>
 
 
@@ -113,15 +210,16 @@
             </div>
           </div>
         </div>
-        <div class="text-right">
-          <button name="details" class="btn-dark btn btn-md rounded-0" type="submit">Enter
-            Details</button>
-          <button name="update" class="btn-dark btn btn-md rounded-0" type="submit">Update
-            Quote!</button>
-        </div>
-      </form>
     </div>
+    <div class="text-right">
+      <button name="details" class="btn-dark btn btn-md rounded-0" type="submit">Enter
+        Details</button>
+      <button name="update" class="btn-dark btn btn-md rounded-0" type="submit">Update
+        Quote!</button>
+    </div>
+    </form>
   </div>
+</div>
 </div>
 
 <div id="loading-overlay">
